cloudflare/kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress
  namespace: cloudflare
spec:
  podSelector: {}
  policyTypes:
  - Ingress
